# rust_kata

./: Cargo.toml
src/: main.rs
