[package]
name = "kata"
version = "0.1.0"
authors = ["DarekBx <darek.baranczuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
itertools = "0.9.0"